--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,3 +24,5 @@ markdown_extensions:
   - pymdownx.details
 extra_javascript:
   - 'https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-MML-AM_CHTML'
+repo_url: https://github.com/susmaker/sus-po-biology
+repo_name: susmaker/sus-po-biology
