--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,6 +22,7 @@ theme:
 markdown_extensions:
   - admonition
   - pymdownx.details
+  - tables
 extra_javascript:
   - 'https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-MML-AM_CHTML'
 repo_url: https://github.com/susmaker/sus-po-biology
